enhanced internal links

--- a/publications/_posts/2020-05-07-us-china-trade-war-supply-chain.html
+++ b/publications/_posts/2020-05-07-us-china-trade-war-supply-chain.html
@@ -1,5 +1,5 @@
 ---
-layout: main
+layout: default
 title: Trump's tariffs disruptive to supply chains, but shifting them away from China won't be easy
 excerpt: The U.S. administration's tariffs on Chinese products, which expanded to an additional 200 billion U.S. dollars' worth of goods in September, are forcing businesses to rethink their supply chains.
 cover-image: images/publications/us-china-trade-war-supply-chain/Marylovely.jpg
