--- a/publications/_posts/2020-05-08-us-election.html
+++ b/publications/_posts/2020-05-08-us-election.html
@@ -1,5 +1,5 @@
 ---
-layout: main
+layout: post-template
 title: Commentary&#58; New U.S. president elected, Americans still confused
 excerpt: American voters will wake up Wednesday morning knowing that Donald Trump is their new president but still feeling confused about where the country will go.
 cover-image: images/publications/us-elections/DonaldTrump.jpg
