--- a/visualizations/_posts/2020-04-04-this-is-a-test-post.html
+++ b/visualizations/_posts/2020-04-04-this-is-a-test-post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post-template
 title: This is a test post
 excerpt: Just a test post, nothing special to say.
 cover-image: /projects/china-state-media-covid-19/images/2-Count of China Stories by Week.svg
